maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:48: error: not found: value a
chemin(a,b);
       ^JediEscaper:48: error: not found: value b
chemin(a,b);
         ^